--- a/cve24029.html
+++ b/cve24029.html
@@ -166,7 +166,7 @@
                     "risk-status-title": "Risk Durumu",
                     "risk-status-content": "Bu tür bir açık, saldırganların sisteminize uzaktan erişim sağlamasına yol açabileceği için oldukça tehlikelidir...",
                     "cve-title": "CVE-2024-24029 Güvenlik Açığı",
-                    "cve-summary": "CVE-2024-24029, JFinalCMS sürüm 5.0.0'da tespit edilen ve kritik olarak değerlendirilen bir SQL enjeksiyonu zafiyetidir...",
+                    " cveSummary:<strong>Özet:</strong> CVE-2024-24029, JFinalCMS sürüm 5.0.0'da tespit edilen ve kritik olarak değerlendirilen bir SQL enjeksiyonu zafiyetidir. Bu güvenlik açığı, uygulamanın /admin/content/data endpointindeki kullanıcı girdisinin yetersiz şekilde doğrulanmasından kaynaklanmaktadır ve saldırganların veritabanında rastgele SQL komutları çalıştırmasına olanak tanır. CVSS puanı 9.8 olan bu açık, gizlilik, bütünlük ve erişilebilirlik üzerinde yüksek derecede olumsuz etkilere yol açabilir.",
                     "usage-scenarios-title": "Kullanım Senaryoları",
                     "usage-scenarios-content": "CVE-2024-24029 açığı, genellikle aşağıdaki yollarla kullanılmaktadır:",
                     "solution-steps-title": "Çözüm Adımları",
