--- a/cve24029.html
+++ b/cve24029.html
@@ -122,118 +122,22 @@
     <li id="least-privilege">En Az Ayrıcalık Prensibi: Kullanıcı hesaplarına yalnızca gereken en düşük erişim düzeyini sağlayın. Veritabanı kullanıcı hesaplarına en az ayrıcalık prensibini uygulamak, yetkisiz erişimi sınırlar.</li>
     <li id="waf-usage">Web Uygulama Güvenlik Duvarı (WAF) Kullanımı: WAF, SQL enjeksiyonu gibi saldırılara karşı bir koruma katmanı ekler. WAF, kötü niyetli SQL sorgularını algılayarak engelleyebilir.</li>
     <li id="logging-monitoring">Günlük ve İzleme: Olay günlüklerini düzenli olarak izleyin ve analiz edin. Güvenlik açıklarını tespit edebilmek için şüpheli etkinlikler veya hatalar hakkında uyarılar alın.</li>
-    <li id="security-tools">Güvenlik Tarayıcıları Kullanma: SQL enjeksiyonu gibi açıkları düzenli olarak taramak için güvenlik araçları (OWASP ZAP, SQLMap vb.) kullanın. Bu araçlar, uygulamanızda güvenlik açıklarını erken tespit etmenize yardımcı olur.</li>
+    <li id="security-audits">Güvenlik Denetimleri: Uygulamanızın güvenliğini sağlamak için düzenli güvenlik denetimleri gerçekleştirin. Bu denetimler, açıkların belirlenmesine ve güvenlik yapılandırmalarının gözden geçirilmesine yardımcı olur.</li>
 </ul>
-
-            <h3 id="code-example-title">Kod Örneği:</h3>
-            <pre>
-# Python ile basit bir güvenlik kontrolü
-import requests
-
-def check_vulnerability(url):
-    response = requests.get(url)
-    if "vulnerable" in response.text:
-        print("Açık var!")
-    else:
-        print("Güvenli.")
-        
-check_vulnerability("http://example.com/vulnerable_endpoint")
-            </pre>
+            <h3 id="references-title">Referanslar</h3>
+            <p id="references-content">CVE-2024-24029 ile ilgili daha fazla bilgi için lütfen şu kaynakları kontrol edin:</p>
+            <ul>
+                <li><a href="https://www.cvedetails.com/cve/CVE-2024-24029" target="_blank">CVE Details</a></li>
+                <li><a href="https://www.securityfocus.com/bid/123456" target="_blank">SecurityFocus</a></li>
+                <li><a href="https://www.nvd.nist.gov/vuln/detail/CVE-2024-24029" target="_blank">NVD - National Vulnerability Database</a></li>
+            </ul>
         </section>
-
-        <div class="two-column-layout">
-            <section class="cve-section">
-                <h2 class="cve-title">Öne Çıkan CVE Açıkları</h2>
-                <div class="cve-container">
-                    <div class="cve-card">
-                        <strong>CVE-2024-24029:</strong> Kritik bir uzaktan kod yürütme açığı. 
-                        <a href="#cve24029">Detaylar</a>
-                    </div>
-                    <div class="cve-card">
-                        <strong>CVE-2024-4567:</strong> Kritik bir güvenlik açığı.
-                        <a href="#">Detaylar</a>
-                    </div>
-                    <div class="cve-card">
-                        <strong>CVE-2024-6789:</strong> Yetkisiz erişim sorunu.
-                        <a href="#">Detaylar</a>
-                    </div>
-                    <div class="cve-card">
-                        <strong>CVE-2024-7890:</strong> DDOS saldırısına açık yapı.
-                        <a href="#">Detaylar</a>
-                    </div>
-                </div>
-            </section>
-
-            <section class="articles-section">
-                <h2 class="articles-title">Son Blog Yazıları</h2>
-                <div class="blog-container">
-                    <div class="blog-card">
-                        <a href="#">Siber Tehditlere Karşı 5 Yeni Yöntem</a>
-                    </div>
-                    <div class="blog-card">
-                        <a href="#">2024'ün En Önemli Siber Güvenlik Eğilimleri</a>
-                    </div>
-                    <div class="blog-card">
-                        <a href="#">Veri Güvenliği İçin En İyi Uygulamalar</a>
-                    </div>
-                    <div class="blog-card">
-                        <a href="#">Siber Savaş ve Geleceği</a>
-                    </div>
-                </div>
-            </section>
-        </div>
     </main>
 
     <footer class="footer">
-        <p>&copy; 2024 Atakan Ayaz. Tüm hakları saklıdır.</p>
+        <p>&copy; 2024 Atakan Ayaz | Tüm Hakları Saklıdır.</p>
     </footer>
 
-    <script>
-        function changeLanguage(lang) {
-            if (lang === 'en') {
-                document.getElementById('page-title').innerText = 'Atakan Ayaz | Cyber Security Blog';
-                document.getElementById('main-title').innerText = 'Atakan Ayaz | Cyber Security Blog';
-                document.getElementById('risk-status-title').innerText = 'Risk Status';
-                document.getElementById('risk-status-content').innerText = 'This type of vulnerability can allow attackers to gain remote access to your system, making it very dangerous. Systems that are not updated or have weak security measures are more vulnerable to such attacks. If an attacker manages to exploit this vulnerability, they can gain full control over the system, access sensitive data, and carry out larger attacks.';
-                document.getElementById('cve-title').innerText = 'CVE-2024-24029 Vulnerability';
-                document.getElementById('cve-summary').innerHTML = '<strong>Summary:</strong> CVE-2024-24029 is a critical SQL injection vulnerability identified in JFinalCMS version 5.0.0. This flaw stems from insufficient validation of user input in the /admin/content/data endpoint, which allows attackers to execute arbitrary SQL commands on the database. With a CVSS score of 9.8, this vulnerability poses significant risks to confidentiality, integrity, and availability, making it a serious security concern.';
-                document.getElementById('usage-scenarios-title').innerText = 'Usage Scenarios';
-                document.getElementById('usage-scenarios-content').innerText = 'CVE-2024-24029 vulnerability is usually exploited in the following ways:';
-               document.getElementById('usage-scenarios-list').innerHTML = '<li>Social Engineering: Redirecting users to fake websites or exploiting the vulnerability through malicious emails.</li>' + '<li>Automated Attacks: Attackers identifying known vulnerabilities using scanners and injecting malicious code into target systems.</li>' + 
-'<li>Unauthorized Data Access: Attackers gaining access to sensitive data (like user credentials, customer info, and financial records) stored in the database.</li>' + 
-'<li>Data Manipulation and Deletion: Attackers modifying or deleting records through SQL query manipulation, disrupting application functionality.</li>' + 
-'<li>Backdoor Creation: Attackers inserting backdoors in the database via SQL injection for persistent access.</li>' + 
-'<li>System Resource Overload: Malicious SQL commands causing high query loads, leading to reduced system performance and possible denial of service.</li>' + 
-'<li>Privilege Escalation: Attackers using SQL injection to gain higher privileges and gain control over the system.</li>';
-
-                document.getElementById('solution-steps-title').innerText = 'Solution Steps';
-                document.getElementById('solution-steps-list').innerHTML = '<li>It is important to follow the steps below to mitigate the effects of this vulnerability:</li><li>Install Security Updates: Immediately install patches or updates provided by the vendor or software supplier. Updates are often necessary to address such security vulnerabilities.</li><li>Input Validation and Filtering: It is crucial to filter user inputs to protect against SQL injections. Secure all input fields in your application (forms, URL parameters, etc.) using validation and filtering methods.</li><li>Use Parameterized Queries and Prepared Statements: Use parameterized expressions or prepared statements in SQL queries to prevent SQL injection. This enhances security by preventing dynamic execution of SQL commands.</li><li>Least Privilege Principle: Provide user accounts only the minimum access level required. Applying the least privilege principle to database user accounts limits unauthorized access.</li><li>Use of Web Application Firewall (WAF): A WAF adds a layer of protection against attacks such as SQL injection. It can detect and block malicious SQL queries.</li><li>Logging and Monitoring: Regularly monitor and analyze event logs. Set alerts for suspicious activities or errors to detect security vulnerabilities.</li><li>Use Security Scanners: Use security tools (such as OWASP ZAP, SQLMap, etc.) to regularly scan for vulnerabilities like SQL injection. These tools help in early detection of security issues in your application.</li>';
-                document.getElementById('code-example-title').innerText = 'Code Example:';
-                document.querySelector('pre').innerText = '# Simple security check in Python\nimport requests\n\ndef check_vulnerability(url):\n    response = requests.get(url)\n    if "vulnerable" in response.text:\n        print("Vulnerability exists!")\n    else:\n        print("Safe.")\n        \ncheck_vulnerability("http://example.com/vulnerable_endpoint")';
-            } else {
-                // Türkçe dil içeriği
-                document.getElementById('page-title').innerText = 'Atakan Ayaz | Siber Güvenlik Blogu';
-                document.getElementById('main-title').innerText = 'Atakan Ayaz | Siber Güvenlik Blogu';
-                document.getElementById('risk-status-title').innerText = 'Risk Durumu';
-                document.getElementById('risk-status-content').innerText = 'Bu tür bir açık, saldırganların sisteminize uzaktan erişim sağlamasına yol açabileceği için oldukça tehlikelidir. Özellikle güncellenmemiş veya zayıf güvenlik önlemlerine sahip sistemler, bu tür saldırılara daha açık hale gelir. Eğer bir saldırgan bu açığı kullanmayı başarırsa, sistem üzerinde tam kontrol sağlayabilir, hassas verilere erişebilir ve daha büyük saldırılar gerçekleştirebilir.';
-                document.getElementById('cve-title').innerText = 'CVE-2024-24029 Güvenlik Açığı';
-                document.getElementById('cve-summary').innerHTML = '<strong>Özet:</strong> CVE-2024-24029, JFinalCMS sürüm 5.0.0'da tespit edilen ve kritik olarak değerlendirilen bir SQL enjeksiyonu zafiyetidir. Bu güvenlik açığı, uygulamanın /admin/content/data endpointindeki kullanıcı girdisinin yetersiz şekilde doğrulanmasından kaynaklanmaktadır ve saldırganların veritabanında rastgele SQL komutları çalıştırmasına olanak tanır. CVSS puanı 9.8 olan bu açık, gizlilik, bütünlük ve erişilebilirlik üzerinde yüksek derecede olumsuz etkilere yol açabilir.';
-                document.getElementById('usage-scenarios-title').innerText = 'Kullanım Senaryoları';
-                document.getElementById('usage-scenarios-content').innerText = 'CVE-2024-24029 açığı, genellikle aşağıdaki yollarla kullanılmaktadır:';
-                document.getElementById('usage-scenarios-list').innerHTML = 
-'<li>Sosyal Mühendislik: Kullanıcıların sahte web sitelerine yönlendirilmesi veya kötü niyetli e-postalar aracılığıyla açığın istismar edilmesi.</li>' + 
-'<li>Otomatik Saldırılar: Saldırganların bilinen açıkları tarayıcılar kullanarak belirleyip, hedef sistemlere kötü niyetli kod enjekte etmesi.</li>' + 
-'<li>Yetkisiz Veri Erişimi: Saldırganların, veritabanında saklanan kullanıcı kimlik bilgileri, müşteri bilgileri ve finansal kayıtlar gibi hassas verilere erişim sağlaması.</li>' + 
-'<li>Veri Manipülasyonu ve Silinmesi: Saldırganların SQL sorgularını manipüle ederek kayıtları değiştirmesi veya silmesi ve uygulama işleyişini bozması.</li>' + 
-'<li>Arka Kapı Oluşturma: SQL enjeksiyonu yoluyla veritabanına arka kapılar ekleyerek saldırganların kalıcı erişim sağlaması.</li>' + 
-'<li>Sistem Kaynaklarının Aşırı Yüklenmesi: Kötü niyetli SQL komutları kullanarak yüksek sorgu yüklerine neden olup sistem performansını düşürmesi ve hizmet kesintisi oluşturması.</li>' + 
-'<li>Ayrıcalık Yükseltme: SQL enjeksiyonu kullanarak saldırganların daha yüksek yetkiler elde etmesi ve sistem üzerinde tam kontrol sağlaması.</li>';
-
-                document.getElementById('solution-steps-title').innerText = 'Çözüm Adımları';
-                document.getElementById('solution-steps-list').innerHTML = '<li>Bu açığın etkilerini azaltmak için aşağıdaki adımları takip etmek önemlidir:</li><li>Güvenlik Güncellemelerini Yükleyin: Üretici veya yazılım sağlayıcı tarafından sağlanan yamaları veya güncellemeleri derhal yükleyin. Güncellemeler genellikle bu tür güvenlik açıklarını gidermek için gereklidir.</li><li>Girdi Doğrulama ve Filtreleme: SQL enjeksiyonlarına karşı korunmak için kullanıcı girdilerini filtrelemek çok önemlidir. Uygulamanızda tüm girdi alanlarını (formlar, URL parametreleri vb.) doğrulama ve filtreleme yöntemleriyle güvenceye alın.</li><li>Parametrik Sorgular ve Hazırlanmış İfadeler Kullanma: SQL enjeksiyonunu önlemek için SQL sorgularında parametrik ifadeler veya hazırlanan ifadeler (prepared statements) kullanın. Bu, SQL komutlarının dinamik bir şekilde yapılmasını engelleyerek güvenliği artırır.</li><li>En Az Ayrıcalık Prensibi: Kullanıcı hesaplarına yalnızca gereken en düşük erişim düzeyini sağlayın. Veritabanı kullanıcı hesaplarına en az ayrıcalık prensibini uygulamak, yetkisiz erişimi sınırlar.</li><li>Web Uygulama Güvenlik Duvarı (WAF) Kullanımı: WAF, SQL enjeksiyonu gibi saldırılara karşı bir koruma katmanı ekler. Kötü niyetli SQL sorgularını algılayarak engelleyebilir.</li><li>Günlük ve İzleme: Olay günlüklerini düzenli olarak izleyin ve analiz edin. Güvenlik açıklarını tespit edebilmek için şüpheli etkinlikler veya hatalar hakkında uyarılar alın.</li><li>Güvenlik Tarayıcıları Kullanma: SQL enjeksiyonu gibi açıkları düzenli olarak taramak için güvenlik araçları (OWASP ZAP, SQLMap vb.) kullanın. Bu araçlar, uygulamanızda güvenlik açıklarını erken tespit etmenize yardımcı olur.</li>';
-                document.querySelector('pre').innerText = '# Python ile basit bir güvenlik kontrolü\nimport requests\n\ndef check_vulnerability(url):\n    response = requests.get(url)\n    if "vulnerable" in response.text:\n        print("Açık var!")\n    else:\n        print("Güvenli.")\n        \ncheck_vulnerability("http://example.com/vulnerable_endpoint")';
-            }
-        }
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
