--- a/cve24029.html
+++ b/cve24029.html
@@ -76,6 +76,7 @@
     </style>
 </head>
 <body>
+     <script src="path/to/your/javascript.js"></script>
     <header class="main-header">
         <h1 id="main-title">Atakan Ayaz | Siber Güvenlik Blogu</h1>
         <nav>
