--- a/cve24029.html
+++ b/cve24029.html
@@ -77,16 +77,16 @@
 </head>
 <body>
      <script src="path/to/your/javascript.js"></script>
-    <header class="main-header">
-        <h1 id="main-title">Atakan Ayaz | Siber Güvenlik Blogu</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html" id="home-link">Ana Sayfa</a></li>
-                <li><a href="cve.html" id="cve-link">CVE Açıkları</a></li>
-                <li><a href="blog.html" id="blog-link">Yazılar</a></li>
-                <li><a href="iletisim.html" id="contact-link">İletişim</a></li>
-            </ul>
-        </nav>
+  <header class="main-header">
+    <h1>Atakan Ayaz | Siber Güvenlik Blogu</h1>
+    <nav>
+        <ul>
+            <li><a href="index.html">Ana Sayfa</a></li>
+            <li><a href="cve.html">CVE Açıkları</a></li>
+            <li><a href="blog.html">Yazılar</a></li>
+            <li><a href="iletisim.html">İletişim</a></li>
+        </ul>
+    </nav>
         <div class="language-switch">
             <button onclick="changeLanguage('en')">English</button>
             <button onclick="changeLanguage('tr')">Türkçe</button>
@@ -128,9 +128,7 @@
             <h3 id="references-title">Referanslar</h3>
             <p id="references-content">CVE-2024-24029 ile ilgili daha fazla bilgi için lütfen şu kaynakları kontrol edin:</p>
             <ul>
-                <li><a href="https://www.cvedetails.com/cve/CVE-2024-24029" target="_blank">CVE Details</a></li>
-                <li><a href="https://www.securityfocus.com/bid/123456" target="_blank">SecurityFocus</a></li>
-                <li><a href="https://www.nvd.nist.gov/vuln/detail/CVE-2024-24029" target="_blank">NVD - National Vulnerability Database</a></li>
+                <li><a href="https://www.cvedetails.com/cve/CVE-2024-24029" target="_blank">CVE Details</a></li>    
             </ul>
         </section>
     </main>
