--- a/cve24029.html
+++ b/cve24029.html
@@ -76,7 +76,7 @@
     </style>
 </head>
 <body>
-     <script src="path/to/your/javascript.js"></script>
+     <script src="script.js"></script>
   <header class="main-header">
     <h1>Atakan Ayaz | Siber Güvenlik Blogu</h1>
     <nav>
