--- a/cve24029.html
+++ b/cve24029.html
@@ -76,17 +76,16 @@
     </style>
 </head>
 <body>
-     <script src="script.js"></script>
-  <header class="main-header">
-    <h1>Atakan Ayaz | Siber Güvenlik Blogu</h1>
-    <nav>
-        <ul>
-            <li><a href="index.html">Ana Sayfa</a></li>
-            <li><a href="cve.html">CVE Açıkları</a></li>
-            <li><a href="blog.html">Yazılar</a></li>
-            <li><a href="iletisim.html">İletişim</a></li>
-        </ul>
-    </nav>
+    <header class="main-header">
+        <h1>Atakan Ayaz | Siber Güvenlik Blogu</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Ana Sayfa</a></li>
+                <li><a href="cve.html">CVE Açıkları</a></li>
+                <li><a href="blog.html">Yazılar</a></li>
+                <li><a href="iletisim.html">İletişim</a></li>
+            </ul>
+        </nav>
         <div class="language-switch">
             <button onclick="changeLanguage('en')">English</button>
             <button onclick="changeLanguage('tr')">Türkçe</button>
@@ -104,27 +103,15 @@
             <p id="cve-summary"><strong>Özet:</strong>CVE-2024-24029, JFinalCMS sürüm 5.0.0'da tespit edilen ve kritik olarak değerlendirilen bir SQL enjeksiyonu zafiyetidir. Bu güvenlik açığı, uygulamanın /admin/content/data endpointindeki kullanıcı girdisinin yetersiz şekilde doğrulanmasından kaynaklanmaktadır ve saldırganların veritabanında rastgele SQL komutları çalıştırmasına olanak tanır. CVSS puanı 9.8 olan bu açık, gizlilik, bütünlük ve erişilebilirlik üzerinde yüksek derecede olumsuz etkilere yol açabilir.</p>
             <h3 id="usage-scenarios-title">Kullanım Senaryoları</h3>
             <p id="usage-scenarios-content">CVE-2024-24029 açığı, genellikle aşağıdaki yollarla kullanılmaktadır:</p>
-          <ul id="usage-scenarios-list">
-    <li id="social-engineering">Sosyal Mühendislik: Kullanıcıların sahte web sitelerine yönlendirilmesi veya kötü niyetli e-postalar aracılığıyla açığın istismar edilmesi.</li>
-    <li id="automated-attacks">Otomatik Saldırılar: Saldırganların, internet üzerindeki bilinen açıkları tarayıcılar kullanarak belirleyip, hedef sistemlere kötü niyetli kod enjekte etmesi.</li>
-    <li id="unauthorized-data-access">Yetkisiz Veri Erişimi: Saldırgan, enjeksiyon yoluyla veritabanında saklanan hassas verilere (kullanıcı bilgileri, müşteri verileri, finansal bilgiler vb.) erişebilir, veri gizliliğini tehlikeye atabilir.</li>
-    <li id="data-manipulation-deletion">Veri Manipülasyonu ve Silinmesi: Saldırgan, SQL sorgularını manipüle ederek veritabanındaki kayıtları değiştirebilir veya silebilir, uygulamanın işleyişini bozabilir.</li>
-    <li id="backdoor-creation">Arka Kapı Oluşturma: SQL enjeksiyon yoluyla saldırganlar, sistemde kalıcı erişim sağlamak için veritabanına arka kapılar ekleyebilir.</li>
-    <li id="system-overload">Sistem Kaynaklarına Aşırı Yüklenme: Zararlı SQL komutları veritabanına yoğun sorgular yaparak sistem performansını düşürebilir ve hizmetin kullanılabilirliğini engelleyebilir.</li>
-    <li id="privilege-escalation">Yetki Yükseltme: SQL enjeksiyonu yoluyla düşük yetkiye sahip bir kullanıcı hesabına erişim sağlanarak daha fazla sistem kontrolü elde edilebilir.</li>
-</ul>
+            <ul id="usage-scenarios-list">
+                <!-- Başlangıçta boş olacak -->
+            </ul>
 
-           <h3 id="solution-steps-title">Çözüm Adımları</h3>
-<ul id="solution-steps-list">
-    <li>Bu açığın etkilerini azaltmak için aşağıdaki adımları takip etmek önemlidir:</li>
-    <li id="software-updates">Güvenlik Güncellemelerini Yükleyin: Üretici veya yazılım sağlayıcı tarafından sağlanan yamaları veya güncellemeleri derhal yükleyin. Güncellemeler genellikle bu tür güvenlik açıklarını gidermek için gereklidir.</li>
-    <li id="input-validation">Girdi Doğrulama ve Filtreleme: SQL enjeksiyonlarına karşı korunmak için kullanıcı girdilerini filtrelemek çok önemlidir. Uygulamanızda tüm girdi alanlarını (formlar, URL parametreleri vb.) doğrulama ve filtreleme yöntemleriyle güvenceye alın.</li>
-    <li id="prepared-statements">Parametrik Sorgular ve Hazırlanmış İfadeler Kullanma: SQL enjeksiyonunu önlemek için SQL sorgularında parametrik ifadeler veya hazırlanan ifadeler (prepared statements) kullanın. Bu, SQL komutlarının dinamik bir şekilde yapılmasını engelleyerek güvenliği artırır.</li>
-    <li id="least-privilege">En Az Ayrıcalık Prensibi: Kullanıcı hesaplarına yalnızca gereken en düşük erişim düzeyini sağlayın. Veritabanı kullanıcı hesaplarına en az ayrıcalık prensibini uygulamak, yetkisiz erişimi sınırlar.</li>
-    <li id="waf-usage">Web Uygulama Güvenlik Duvarı (WAF) Kullanımı: WAF, SQL enjeksiyonu gibi saldırılara karşı bir koruma katmanı ekler. WAF, kötü niyetli SQL sorgularını algılayarak engelleyebilir.</li>
-    <li id="logging-monitoring">Günlük ve İzleme: Olay günlüklerini düzenli olarak izleyin ve analiz edin. Güvenlik açıklarını tespit edebilmek için şüpheli etkinlikler veya hatalar hakkında uyarılar alın.</li>
-    <li id="security-audits">Güvenlik Denetimleri: Uygulamanızın güvenliğini sağlamak için düzenli güvenlik denetimleri gerçekleştirin. Bu denetimler, açıkların belirlenmesine ve güvenlik yapılandırmalarının gözden geçirilmesine yardımcı olur.</li>
-</ul>
+            <h3 id="solution-steps-title">Çözüm Adımları</h3>
+            <ul id="solution-steps-list">
+                <!-- Başlangıçta boş olacak -->
+            </ul>
+
             <h3 id="references-title">Referanslar</h3>
             <p id="references-content">CVE-2024-24029 ile ilgili daha fazla bilgi için lütfen şu kaynakları kontrol edin:</p>
             <ul>
