--- a/cve24029.html
+++ b/cve24029.html
@@ -86,10 +86,10 @@
                 <li><a href="iletisim.html">İletişim</a></li>
             </ul>
         </nav>
-        <div class="language-switch">
-            <button onclick="changeLanguage('en')">English</button>
-            <button onclick="changeLanguage('tr')">Türkçe</button>
-        </div>
+       /* <div class="language-switch"> */
+         /*   <button onclick="changeLanguage('en')">English</button> */
+         /*   <button onclick="changeLanguage('tr')">Türkçe</button> */
+      /*  </div> */
     </header>
 
     <main>
