--- a/cve24029.html
+++ b/cve24029.html
@@ -76,6 +76,7 @@
     </style>
 </head>
 <body>
+    <script src="script.js"></script>
     <header class="main-header">
         <h1>Atakan Ayaz | Siber Güvenlik Blogu</h1>
         <nav>
