--- a/cve24029.html
+++ b/cve24029.html
@@ -88,7 +88,7 @@
             </ul>
         </nav>
         <div class="language-switch"> 
-        Yapım Aşamasında.. <button onclick="changeLanguage('en')">English</button> 
+        Yakında.. <button onclick="changeLanguage('en')">English</button> 
          <button onclick="changeLanguage('tr')">Türkçe</button> 
       </div> 
     </header>
